--- a/aboutMe.html
+++ b/aboutMe.html
@@ -24,7 +24,7 @@
                     &emsp;&emsp;This summer (2017), I am interning at <strong>University Vists</strong>, a startup that allows students to pay for private hosting (by current undergrads) for colleges they are thinking about applying to. I also do freelance jobs in my spare time and currently manage <strong>websites</strong> for a couple of clients. 
                     <br>
                     <br>
-                    &emsp;&emsp;I got my start in programming by making programs that made high school life easier (ie homework tools, websites, ect.). My experience has led me to be a competetive <strong>Computer Science</strong> major Hopkins.
+                    &emsp;&emsp;I got my start in programming by making programs that made high school life easier (ie homework tools, websites, ect.). My experience has led me to be a competetive <strong>Computer Science</strong> major at Johns Hopkins.
                     <br>
                     <br>
                     &emsp;&emsp;I'm a maker, a tinkerer, and a hacker. I've traveled to several hackathons and coding competitions and worked on a bunch of projects, from Android apps to art created with algorithmic coding in JavaScript. I firmly believe in <strong>learning by doing</strong> and taking education into your own hands.
