--- a/aboutMe.html
+++ b/aboutMe.html
@@ -28,7 +28,11 @@
                     <br>
                     <br>
                     &emsp;&emsp;I'm a maker, a tinkerer, and a hacker. I've traveled to several hackathons and coding competitions and worked on a bunch of projects, from Android apps to art created with algorithmic coding in JavaScript. I firmly believe in <strong>learning by doing</strong> and taking education into your own hands.
-                </h3>
+               	    <br>
+	    	    <br>
+		    (You will find my contact information on my résumé.)
+		
+		</h3>
                 <br>
             <a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf" class="button button-block button-rounded button-white button-large" style="height:50px; width:100%; color:white; background-color:red;"><i class="fa fa-file-text-o"></i>Résumé</a>
             <br>
