--- a/blogs/bl1.html
+++ b/blogs/bl1.html
@@ -38,7 +38,7 @@
                             <br>
                             <br>
                             
-                            &emsp;&emsp;I really enjoy being able to create something from nothing. A few of my friends cs major friends want to go into economics. At first I thought it sounded exciting to be working in such a dynamic and seemingly unpredictable field, but in a lot of situations it's really just a zero sum game. I don't want to work in an industry where nothing is truly gained. Any victory in economics was a loss for someone else. With computer science, and writing too, I can sit at a desk and create something that didn't exist until I created it. It's a wonderful feeling to be able to add to the universe, rather than taking from something that was already here.
+                            &emsp;&emsp;I really enjoy being able to create something from nothing. A few of my friends cs major friends want to go into economics. At first I thought it sounded exciting to be working in such a dynamic and seemingly unpredictable field, but in a lot of situations (especially on Wall Street where most CS/Econ majors end up) it's really just a zero sum game. I don't want to work in an industry where nothing is truly gained. Any victory in economics was a loss for someone else. With computer science, and writing too, I can sit at a desk and create something that didn't exist until I created it. It's a wonderful feeling to be able to add to the universe, rather than taking from something that was already here.
                             
                             <br>
                             <br>
