--- a/aboutMe.html
+++ b/aboutMe.html
@@ -17,7 +17,7 @@
                  
             <h2>I'm <strong>Reece</strong></h2> 
             
-                <h3 style="background-color:rgba(255, 255, 255, .6); color:black; padding:20px;" align="left"> <img src="images/av6.jpg" align="right"/>
+                <h3 style="background-color:rgba(255, 255, 255, .6); color:black; padding:20px;" align="left"> <img src="images/david.jpg" align="right"/>
                     &emsp;&emsp;I'm <strong>California</strong> native and current Undergraduate studying <strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong> at <strong>Johns Hopkins University</strong>. 
                     <br>
                     <br>
