--- a/aboutMe.html
+++ b/aboutMe.html
@@ -18,7 +18,7 @@
             <h2>I'm <strong>Reece</strong></h2> 
             
                 <h3 style="background-color:rgba(255, 255, 255, .6); color:black; padding:20px;" align="left"> <img src="images/david.jpg" align="right" height="250px" width="250px"/>
-                    &emsp;&emsp;I'm <strong>California</strong> native and current Undergraduate studying <strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong> at <strong>Johns Hopkins University</strong>. 
+                    &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying <strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong> at <strong>Johns Hopkins University</strong>. 
                     <br>
                     <br>
                     &emsp;&emsp;This summer (2017), I am interning at <strong>University Vists</strong>, a startup that allows students to pay for private hosting (by current undergrads) for colleges they are thinking about applying to. I also do freelance jobs in my spare time and currently manage <strong>websites</strong> for a couple of clients. 
