--- a/blogs/bl2.html
+++ b/blogs/bl2.html
@@ -24,7 +24,7 @@
 						
 							<center>
 			<ul class="icons">
-				<li><a href="blog.html" class="icon style2 fa fa-pencil"><span class="label">Back to All Posts</span></a><p>Back to All Posts</p></li>
+				<li><a href="../blog.html" class="icon style2 fa fa-pencil"><span class="label">Back to All Posts</span></a><p>Back to All Posts</p></li>
 	    		</ul>
 	    	</center>
 						
