--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<ul class="icons">
 							<li><a href="blog.html" class="icon style2 fa fa-pencil"><span class="label">Blog</span></a><p>Blog</p></li>
                            
-							<li><a href="https://github.com/rgriffith98" class="icon style2 fa-github"><span class="label">Github</span></a><p>Github</p></li>
+							<li><a href="https://github.com/rgriffith98" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a><p>Github</p></li>
 							
 							<li><a href="aboutMe.html" class="icon style2 fa fa-user"><span class="label">About Me</span></a><p>About Me</p></li>
                         </ul>
