--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
 		<ul class="icons">
 		<li><a href="index.html" class="icon style2 fa fa-home"><span class="label">Home</span></a><p>Home</p></li>
                            
-		<li><a href="https://github.com/rgriffith98" class="icon style2 fa-github"><span class="label">Github</span></a><p>Github</p></li>
+		<li><a href="https://github.com/rgriffith98" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a><p>Github</p></li>
 						
 		    <li><a href="aboutMe.html" class="icon style2 fa fa-user"><span class="label">About Me</span></a><p>About Me</p></li>
 	    </ul>
