--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,7 +20,7 @@
 		<ul class="icons">
 		<li><a href="blog.html" class="icon style2 fa fa-pencil"><span class="label">Blog</span></a><p>Blog</p></li>
                            
-		<li><a href="https://github.com/rgriffith98" class="icon style2 fa-github"><span class="label">Github</span></a><p>Github</p></li>
+		<li><a href="https://github.com/rgriffith98" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a><p>Github</p></li>
 						
 		    <li><a href="index.html" class="icon style2 fa fa-home"><span class="label">Home</span></a><p>Home</p></li>
 	    </ul>
