--- a/blog.html
+++ b/blog.html
@@ -65,6 +65,11 @@
 				    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">Google Games Washington D.C. 2017</h3>
                 </a>
                 
+		<a href="blogs/bl6.html">
+                    <img src="images/littlelife.jpg" alt="" />
+				    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">A Litte Life (Book Review)</h3>
+                </a>
+		    
             </div>
             </section>
         </section>
