--- a/blog.html
+++ b/blog.html
@@ -52,9 +52,9 @@
 					<h3 style="background-color:rgba(255, 255, 255, .6); color:black;">Hacking for the First Time</h3>
                 </a>
 		    
-		<a href="blogs/bl5.html">
-                    <img src="images/lfb.jpg" alt="" />
-				    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">Lord Foul's Bane (Book Review)</h3>
+		<a href=#>
+                    <img src="images/pending.jpg" alt="" />
+				    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">Pending</h3>
                 </a>
                 
             </div>
