--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
                 </a>
 		    
 		<a href=#>
-                    <img src="images/pending.jpg" alt="" />
+                    <img src="images/coming.gif" alt="" />
 				    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">Pending</h3>
                 </a>
                 
