--- a/blog.html
+++ b/blog.html
@@ -53,8 +53,8 @@
                 </a>
 		    
 		<a href=#>
-                    <img src="images/coming.gif" alt="" />
-				    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">Pending</h3>
+                    <img src="images/coming.jpg" alt="" />
+				    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">Coming Soon</h3>
                 </a>
                 
             </div>
