--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
             </section>
         	<br>
 		<center>
-            		<a href="#" class="button button-block button-rounded button-white button-large" style="height:50px; width:20%; color:white; background-color:red;"><i class="fa fa-level-up"></i> XxX</a>
+            		<a href="#" class="button button-block button-rounded button-white button-large" style="height:50px; width:25%; color:white; background-color:red;"><i class="fa fa-hand-pointer-o"></i> Back to Top</a>
 		</center>
 		<br>
 	    </section>
