--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
             <div>
                 <a href="blogs/bl1.html">
                     <img src="images/writ.jpg" alt="" />
-                    <h3 style="background-color:rgba(255, 255, 255, .6); color:black;">My Adventure with Writing</h3>
+                    <h3 style="background-color:rgba(255, 0, 0, .6); color:white;">My Adventure with Writing</h3>
                 </a>
 		    
 		<a href="blogs/bl3.html">
