--- a/aboutMe.html
+++ b/aboutMe.html
@@ -62,8 +62,8 @@
                     </h3>
                     <h3 style="background-color:rgba(255, 0, 0, .6); color:white; padding:20px;">
                         <ul>
-                            <li><strong>CS Languages:</strong> C/C++, Java, Python, Linux, JavaScript (p5), HTML, CSS, SQL</li>
-                            <li><strong>Technologies:</strong> Android (and Studio), Wordpress, React.js</li>
+                            <li><strong>Computer Science:</strong> C/C++, Java, Python, Linux, JavaScript (p5), HTML, CSS, SQL/NoSQL (familiarity)</li>
+                            <li><strong>Technologies:</strong> Android (Android Studio), Wordpress, Photoshop</li>
                             <li>Git</li>
                         </ul> 
                     </h3>
