--- a/blogs/bl6.html
+++ b/blogs/bl6.html
@@ -34,7 +34,7 @@
                             <br>
                             <br>
                             
-                            &emsp;&emsp;
+				&emsp;&emsp; <p>pending...</p>
                             
                             <br>
                             <br>
