--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
             
             <div>
                 <a href="blogs/bl1.html">
-                    <img src="images/writ.jpg" alt="" />
+                    <img src="images/writing.gif" alt="" />
                     <h3 style="background-color:rgba(255, 0, 0, .6); color:white;">My Adventure with Writing</h3>
                 </a>
 		    
