--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
                 </a>
 		    
 		<a href=#>
-                    <img src="images/bg.gif" alt="" />
+                    <img src="images/coming.gif" alt="" />
 				    <h3 style="background-color:rgba(255, 0, 0, .6); color:white;">Coming Soon</h3>
                 </a>
                 
