--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
 								
             <div>
                 <a href="blogs/bl4.html">
-                    <img src="images/goog.jpg" alt="" />
+                    <img src="images/goog.gif" alt="" />
 				    <h3 style="background-color:rgba(255, 0, 0, .6); color:white;">Google Games Washington D.C. 2017</h3>
                 </a>
                 
