--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
 			
             <div>
                 <a href="blogs/bl2.html">
-                    <img src="images/hack.jpg" alt="" />
+                    <img src="images/hack.gif" alt="" />
 					<h3 style="background-color:rgba(255, 0, 0, .6); color:white;">Hacking for the First Time</h3>
                 </a>
 		    
