--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<p>Last Update: 2017 June</p>
-						<p>If you have any suggestions for the site or general comments,</p>
-						<p>please email me :)</p>
+						<p>If you have any suggestions for the site or general comments, please email me :)</p>
 					</footer>
 
 			</div>
