--- a/blogs/bl4.html
+++ b/blogs/bl4.html
@@ -23,7 +23,7 @@
 						
 		<center>
 			<ul class="icons">
-				<li><a href="../blog.html" class="icon style2 fa fa-pencil"><span class="label">Back to All Posts</span></a><p>Back to All Posts</p></li>
+				<li><a href="../blog.html" class="icon style2 fa fa-pencil" style="color:red"><span class="label">Back to All Posts</span></a><p>Back to All Posts</p></li>
 	    		</ul>
 	    	</center>
                         
