--- a/aboutMe.html
+++ b/aboutMe.html
@@ -37,7 +37,7 @@
                     &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying <strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong> at <strong>Johns Hopkins University</strong>. 
                     <br>
                     <br>
-                    &emsp;&emsp;This summer (2017), I am interning at the <strong>Johns Hopkins University Applied Physics Laboratory</strong> as a part of a startup called synoPTis. The group is currently working on a mobile application to streamline patient records and data for the Johns Hopkins Medical Center. I will be working as a developer on the front end portion of the project. In addition to this work, I have taken on a few clients for which I manage their websites. 
+                    &emsp;&emsp;This summer (2017), I am interning at the <strong>Johns Hopkins University Applied Physics Laboratory</strong> as a part of a startup called synoPTis. The group is currently working on a mobile application to streamline patient records and data for the Johns Hopkins Medical Center. I will be working as a developer on the front end portion of the project. In addition to this work, I have taken on a few clients for which I manage their <strong>websites</strong>. 
                     <br>
                     <br>
                     &emsp;&emsp;I got my start in programming by making programs that made high school life easier (ie homework tools, websites, ect.). My experience has led me to be a competetive <strong>Computer Science</strong> major at Johns Hopkins.
