--- a/aboutMe.html
+++ b/aboutMe.html
@@ -62,9 +62,9 @@
                     </h3>
                     <h3 style="background-color:rgba(255, 0, 0, .6); color:white; padding:20px;">
                         <ul>
-                            <li><strong>Computer Science:</strong> C/C++, Java, Python, Linux, JavaScript (p5), HTML, CSS, SQL/NoSQL (familiarity)</li>
+                            <li><strong>Computer Science:</strong> C/C++, Java, Python, Linux, JavaScript (p5), Ionic 2 (framework for iOS, android, and windows apps), Angular, HTML, CSS, SQL/NoSQL (familiarity)</li>
                             <li><strong>Technologies:</strong> Android (Android Studio), Wordpress, Photoshop</li>
-                            <li>Git</li>
+                            <li>Git (Github and Gitlab)</li>
                         </ul> 
                     </h3>
                 </div>
