--- a/blogs/bl3.html
+++ b/blogs/bl3.html
@@ -45,7 +45,7 @@
                             <br>
                             <br>
                             
-                            &emsp;&emsp;As I said, I also dabble in p5 and have created a couple of pieces myself. You can see my pieces <a style="color:red;" href="https://www.openprocessing.org/user/90362">here</a>. If you'd like to try it out yourself, youll need to download the <a style="color:red;" href="https://p5js.org/download/">p5 software</a> and <a style="color:red;" href="http://brackets.io">brachets</a> for the IDE. Don't bother with the p5 IDE, it's still being developed (sort of buggy) and isn't always supported.
+                            &emsp;&emsp;As I said, I also enjoy working with p5 and have created a couple of pieces myself. I also have some code demos of the basics to get you started. You can see my code <a style="color:red;" href="https://github.com/rgriffith98/JavaScript-Processing-with-p5">here</a>. If you'd like to try it out yourself, youll need to download the <a style="color:red;" href="https://p5js.org/download/">p5 software</a> and <a style="color:red;" href="http://brackets.io">brachets</a> for the IDE. Don't bother with the p5 IDE, it's still being developed (sort of buggy) and isn't always supported.
                             
 				<br>
 				<br>
