--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 	<br>
 	   
 	<div>
-            <img align="left" src="images/proj_imgs/crawl.png" class="pads" height="200px" width="200px">
+            <img align="left" src="images/proj_imgs/crwl.png" class="pads" height="200px" width="200px">
             <h2>Python Web Crawlers</h2>
 		<p style="background-color:rgba(255, 255, 255, .6); color:black;">Test</p>
 	</div>
