--- a/projects.html
+++ b/projects.html
@@ -73,8 +73,22 @@
 	   
 	<div>
             <img align="left" src="images/proj_imgs/crwl.png" class="pads" height="200px" width="200px">
-            <h2>Python Web Crawlers</h2>
-		<p style="background-color:rgba(255, 255, 255, .6); color:black;">Test</p>
+            <h2>Python Web Crawlers</h2>gather
+		<p style="background-color:rgba(255, 255, 255, .6); color:black;">Some of the <strong>most exciting</strong> things I did with programming (early 
+			on) was building <strong>web crawlers</strong>. Here are my favorites (using <strong>python 3</strong> and Beautiful Soup). 1) <strong>Internship.com</strong> 
+			Crawler: I built this in my first semester of freshman year. Internships seemed increasingly important for 
+			<strong>CS majors</strong>, especialy at Hopkins where people are so competetive. 
+			I made this crawler to go through all availiable internship <strong>positions</strong> from Internship.com, one of the <strong>worlds largest</strong> 
+			internship posting sites. I liked it and used it so much, that I added in a <strong>filtering</strong> feature that allows you to select 
+			interships by major. I sent it to some of my friends, and they ended up using it too. I actually didn't choose an internship 
+			from this site, because I found a great fit at <strong>synoPTsis</strong> (listed towards the top of the page). 2) <strong>Reddit</strong> Hot Word: I built this crawler during my 
+			second semester of freshman year. Free time is extremely <strong>rare</strong> in college and even more so when you're an <strong>engineer</strong>. This crawler 
+			creawls through Reddit's front page and lists the <strong>most used</strong> word of the day. It was really fun to use around election season. 
+			The code for both crawlers can be found at these Github Repos: <a href="https://github.com/rgriffith98/Internship.com-Crawler">(1)</a> and <a href="https://github.com/rgriffith98/Reddit-Hot-Word">(2)</a>. 
+			I think python is a great intro to programming, and webcrawlers 
+			are a fun way to see the results of your work. (I still think the best intro to programming is 
+			<strong>JavaScript p5</strong>. See this <a href="bl3.html">blog post</a> 
+			for more.)</p>
 	</div>
         
 	<br>
