--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <div>
             <img align="left" src="images/proj_imgs/p5js.png" class="pads" height="200px" width="200px">
             <h2>JavaScript using p5 Processing</h2>
-            <p style="background-color:rgba(255, 255, 255, .6); color:black;">This is one of my <strong>larger coding projects</strong>. I've ran through a lot of online tutorials and such when I learned how to use p5, so I'm counting that as a sort of project (all the programs I created during th learning process). Processing is a js project that using <strong>drawing tools</strong> on an html canvas. Its most advanced applications is <strong>data visualization</strong> through <strong>algorithmic programming</strong>. I talked about the project as an art form and the growing community behind it in one of my <a target="_blank" href="https://github.com/rgriffith98" style="color:red;">blog posts</a>. As I mentioned, I have compiled my code into a <a target="_blank" href="https://github.com/rgriffith98/JavaScript-Processing-with-p5" style="color:red;">Github repository</a> that is open to the public. I also plan to mention larger portions of these code samples that better and more specifically demonstrate the potential and scope of the <strong>p5 project</strong>.</p>
+            <p style="background-color:rgba(255, 255, 255, .6); color:black;">This is one of my <strong>larger coding projects</strong>. I've ran through a lot of online tutorials and such when I learned how to use p5, so I'm counting that as a sort of project (all the programs I created during th learning process). Processing is a js project that using <strong>drawing tools</strong> on an html canvas. Its most advanced applications is <strong>data visualization</strong> through <strong>algorithmic programming</strong>. I talked about the project as an art form and the growing community behind it in one of my <a target="_blank" href="bl3.html" style="color:red;">blog posts</a>. As I mentioned, I have compiled my code into a <a target="_blank" href="https://github.com/rgriffith98/JavaScript-Processing-with-p5" style="color:red;">Github repository</a> that is open to the public. I also plan to mention larger portions of these code samples that better and more specifically demonstrate the potential and scope of the <strong>p5 project</strong>.</p>
         </div>
 	    
 	<br>
@@ -84,10 +84,11 @@
 			from this site, because I found a great fit at <strong>synoPTsis</strong> (listed towards the top of the page). 2) <strong>Reddit</strong> Hot Word: I built this crawler during my 
 			second semester of freshman year. Free time is extremely <strong>rare</strong> in college and even more so when you're an <strong>engineer</strong>. This crawler 
 			creawls through Reddit's front page and lists the <strong>most used</strong> word of the day. It was really fun to use around election season. 
-			The code for both crawlers can be found at these Github Repos: <a href="https://github.com/rgriffith98/Internship.com-Crawler">(1)</a> and <a href="https://github.com/rgriffith98/Reddit-Hot-Word">(2)</a>. 
+			The code for both crawlers can be found at these Github Repos: <a target="_blank" href="https://github.com/rgriffith98/Internship.com-Crawler" style="color:red">(1)</a> 
+			and <a target="_blank" href="https://github.com/rgriffith98/Reddit-Hot-Word" style="color:red">(2)</a>. 
 			I think python is a great intro to programming, and webcrawlers 
 			are a fun way to see the results of your work. (I still think the best intro to programming is 
-			<strong>JavaScript p5</strong>. See this <a href="bl3.html">blog post</a> 
+			<strong>JavaScript p5</strong>. See this <a target="_blank" href="bl3.html" style="color:red">blog post</a> 
 			for more.)</p>
 	</div>
         
