--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <div>
             <img align="left" src="images/proj_imgs/p5js.png" class="pads" height="200px" width="200px">
             <h2>JavaScript using p5 Processing</h2>
-            <p style="background-color:rgba(255, 255, 255, .6); color:black;">This is one of my <strong>larger coding projects</strong>. I've ran through a lot of online tutorials and such when I learned how to use p5, so I'm counting that as a sort of project (all the programs I created during th learning process). Processing is a js project that using <strong>drawing tools</strong> on an html canvas. Its most advanced applications is <strong>data visualization</strong> through <strong>algorithmic programming</strong>. I talked about the project as an art form and the growing community behind it in one of my <a target="_blank" href="bl3.html" style="color:red;">blog posts</a>. As I mentioned, I have compiled my code into a <a target="_blank" href="https://github.com/rgriffith98/JavaScript-Processing-with-p5" style="color:red;">Github repository</a> that is open to the public. I also plan to mention larger portions of these code samples that better and more specifically demonstrate the potential and scope of the <strong>p5 project</strong>.</p>
+            <p style="background-color:rgba(255, 255, 255, .6); color:black;">This is one of my <strong>larger coding projects</strong>. I've ran through a lot of online tutorials and such when I learned how to use p5, so I'm counting that as a sort of project (all the programs I created during th learning process). Processing is a js project that using <strong>drawing tools</strong> on an html canvas. Its most advanced applications is <strong>data visualization</strong> through <strong>algorithmic programming</strong>. I talked about the project as an art form and the growing community behind it in one of my <a target="_blank" href="blogs/bl3.html" style="color:red;">blog posts</a>. As I mentioned, I have compiled my code into a <a target="_blank" href="https://github.com/rgriffith98/JavaScript-Processing-with-p5" style="color:red;">Github repository</a> that is open to the public. I also plan to mention larger portions of these code samples that better and more specifically demonstrate the potential and scope of the <strong>p5 project</strong>.</p>
         </div>
 	    
 	<br>
@@ -88,7 +88,7 @@
 			and <a target="_blank" href="https://github.com/rgriffith98/Reddit-Hot-Word" style="color:red">(2)</a>. 
 			I think python is a great intro to programming, and webcrawlers 
 			are a fun way to see the results of your work. (I still think the best intro to programming is 
-			<strong>JavaScript p5</strong>. See this <a target="_blank" href="bl3.html" style="color:red">blog post</a> 
+			<strong>JavaScript p5</strong>. See this <a target="_blank" href="blogs/bl3.html" style="color:red">blog post</a> 
 			for more.)</p>
 	</div>
         
