--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
 	<br>
 	    
 	<div>
-            <img align="left" src="images/proj_imgs/syno_logo.png" class="pads" height="80px" width="270px">
+            <img align="left" src="images/proj_imgs/apl.jpg" class="pads" height="200px" width="200px">
             <h2>synoPTsis</h2>
 	    <p style="background-color:rgba(255, 255, 255, .6); color:black;">synoPTsis is a <strong>Johns Hopkins</strong> University Applied Physics Lab <strong>startup</strong> that is working to streamline (through an android a iOS application) <strong>pateint data</strong> to allow physicians to more efficiently treat patients at the <strong>Johns Hopkins Hospital</strong>. I have been working as a <strong>front-end developer</strong> at the company <strong>since June</strong> of <strong>2017</strong>. While my main duties consisted of building the <strong>user interface</strong> for the app, I spent a decent amount of time working on porting backend code to make requests to our <strong>server</strong>. I worked with <strong>Ionic2</strong> (a cross compiling framework) to <strong>synchronously</strong> build the front-end of the <strong>android</strong> and <strong>iOS</strong> application. As I mentioned, I helped connect the server (using <strong>Google Protobuf</strong>) to display certain pieces of data. I also designed some charts for the <strong>vitals</strong> section of the app using the <strong>Chart.js API</strong>. Since this is a <strong>private project</strong>, I am not at liberty to share code publicly. However, if you are an employer, I'm sure the person in charge would allow me to share it for professional purposes. (Just shoot me an <strong>email</strong>).</p>
         </div>
