--- a/projects.html
+++ b/projects.html
@@ -129,11 +129,11 @@
 			from this site, because I found a great fit at <strong>synoPTsis</strong> (listed towards the top of the page). 2) <strong>Reddit</strong> Hot Word: I built this crawler during my 
 			second semester of freshman year. Free time is extremely <strong>rare</strong> in college and even more so when you're an <strong>engineer</strong>. This crawler 
 			creawls through Reddit's front page and lists the <strong>most used</strong> word of the day. It was really fun to use around election season. 
-			The code for both crawlers can be found at these Github Repos: <a target="_blank" href="https://github.com/rgriffith98/Internship.com-Crawler" style="color:color:rgb(255, 215, 51)">(1)</a> 
-			and <a target="_blank" href="https://github.com/rgriffith98/Reddit-Hot-Word" style="color:color:rgb(255, 215, 51)">(2)</a>. 
+			The code for both crawlers can be found at these Github Repos: <a target="_blank" href="https://github.com/rgriffith98/Internship.com-Crawler" style="color:rgb(255, 215, 51)">(1)</a> 
+			and <a target="_blank" href="https://github.com/rgriffith98/Reddit-Hot-Word" style="color:rgb(255, 215, 51)">(2)</a>. 
 			I think python is a great intro to programming, and webcrawlers 
 			are a fun way to see the results of your work. (I still think the best intro to programming is 
-			<strong>JavaScript p5</strong>. See this <a target="_blank" href="blogs/bl3.html" style="color:color:rgb(255, 215, 51)">blog post</a> 
+			<strong>JavaScript p5</strong>. See this <a target="_blank" href="blogs/bl3.html" style="color:rgb(255, 215, 51)">blog post</a> 
 			for more.)</p>
 	</div>
         
