--- a/blogs/bl4.html
+++ b/blogs/bl4.html
@@ -23,7 +23,7 @@
 						
 		<center>
 			<ul class="icons">
-				<li><a href="../blog.html" class="icon style2 fa fa-pencil" style="color:red"><span class="label">Back to All Posts</span></a><p>Back to All Posts</p></li>
+				<li><a href="../blog.html" class="icon style2 fa fa-pencil" style="color:rgb(255, 215, 51)"><span class="label">Back to All Posts</span></a><p>Back to All Posts</p></li>
 	    		</ul>
 	    	</center>
                         
@@ -51,7 +51,7 @@
 			<br>
 			<br>
 						</h3>		
-                <h3 align="left" style="background-color:rgba(255, 0, 0, .6); color:white; padding:20px;">        
+                <h3 align="left" style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">        
 				<!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
