--- a/blogs/bl3.html
+++ b/blogs/bl3.html
@@ -44,6 +44,11 @@
                             
                             <br>
                             <br>
+			
+			    &emsp;&emsp;If you're interested in getting started with p5, you'll want to follow 
+				this set of video tutorials that takes you through setup, fundamentals of p5.js, 
+				and some really fun coding challenges all step by step! (<a style="color:rgb(255, 215, 51);" href="https://www.youtube.com/playlist?list=PLRqwX-V7Uu6Zy51Q-x9tMWIv9cueOFTFA">The Coding Train p5</a>)
+			
 			    <br>
 			</h3>
 						
