--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,7 +35,7 @@
 		
             <h2>I'm <strong>Reece</strong></h2> 
             
-                <h3 style="background-color:rgba(255, 255, 255, .6); color:black; padding:20px;" align="left"> <img src="images/avatar.jpg" align="right" height="357px" width="257px"/>
+                <h3 style="background-color:rgba(255, 255, 255, .6); color:black; padding:20px;" align="left"> <img src="images/avatar.jpg" align="right" height="100%" width="100%"/>
                     &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying <strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong> at <strong>Johns Hopkins University</strong>. 
                     <br>
                     <br>
