--- a/aboutMe.html
+++ b/aboutMe.html
@@ -42,7 +42,7 @@
                     &emsp;&emsp;This summer (2017), I am interning at the <strong>Johns Hopkins University Applied Physics Laboratory</strong> as a part of a startup called <strong>synoPTis</strong>. The group is currently working on a mobile application to streamline patient records and data for the Johns Hopkins Medical Center. I will be working as a developer on the front end portion of the project. In addition to this, I manage <strong>websites</strong> for a few clients. 
                     <br>
                     <br>
-                    &emsp;&emsp;I got my start in programming by making programs that made high school life easier (ie homework tools, websites, ect.). My experience has led me to be a competetive <strong>Computer Science</strong> major at Johns Hopkins.
+                    &emsp;&emsp;I got my start in computer science by making programs that made high school life easier (ie homework tools, websites, ect.). My experience has led me to be a competetive <strong>Computer Science</strong> major at Johns Hopkins.
                     <br>
                     <br>
                     &emsp;&emsp;I'm a maker, a tinkerer, and a hacker. I've traveled to several hackathons and coding competitions and worked on a bunch of projects, from Android apps to art created with algorithmic coding in JavaScript. I firmly believe in <strong>learning by doing</strong> and taking education into your own hands.
