--- a/blogs/bl1.html
+++ b/blogs/bl1.html
@@ -87,7 +87,7 @@
 				down and creates a masterpiece. Just give it a try. Even <strong>Hemingway</strong> wasn't born a 
 				great writer. In fact, Hemingway was a <strong>drunk</strong>, but I'm sure he still worked
 				hard at his craft. That said, if you're sober, you've already got a leg up on one of the
-				greatest writers in history. All joking aside, just go out and try it.
+				greatest writers in history. All joking aside, just go out and <strong>try it</strong>.
                             
                             <br>
                             <br>
