--- a/blogs/bl1.html
+++ b/blogs/bl1.html
@@ -47,7 +47,7 @@
                             &emsp;&emsp;I had to catch up quick. I didn't have my own computer until after 
 				highschool, because money was always a little tight. I  also didn't really 
 				want to announce to my family that I was writing a book by using the home 
-				computer, so I used my  smartphone to write over 25,000 words over the 
+				computer, so I used my  smartphone to write over <strong>25,000 words</strong> over the 
 				course of a few months. I really loved it, creating something tangible with 
 				only a keyboard. I think thats something that always drew me to computer
 				science.
@@ -59,7 +59,7 @@
 				my friends cs major friends want to go into economics. At first I thought it
 				sounded exciting to be working in such a dynamic and seemingly unpredictable
 				field, but in a lot of situations (especially on Wall Street where most 
-				CS/Econ majors end up) it's really just a zero sum game. I don't want to work
+				CS/Econ majors end up) it's really just a <strong>zero sum</strong> game. I don't want to work
 				in an industry where nothing is truly gained. Any victory in economics was a
 				loss for someone else. With computer science, and writing too, I can sit at
 				a desk and create something that didn't exist until I created it. It's a
