--- a/blog.html
+++ b/blog.html
@@ -55,8 +55,8 @@
 					<h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Hacking for the First Time</h3>
                 </a>
 		    
-		<a href=#>
-                    <img src="images/coming.gif" alt="" />
+		<a href="blogs/bl5.html">
+                    <img src="images/nyc.gif" alt="" />
 				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Coming Soon</h3>
                 </a>
                 
