--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
 		    
 		<a href="blogs/bl5.html">
                     <img src="images/nyc.gif" alt="" />
-				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Coming Soon</h3>
+				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">The New York City Trip</h3>
                 </a>
                 
             </div>
