--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
 		    
 		<a href="blogs/bl3.html">
                     <img src="images/js.gif" alt="" />
-				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Making Art with JavaScript Processing</h3>
+				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Making Art with the JavaScript p5 Project</h3>
 		</a>
 		    
             </div>
