--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
                 </a>
 		    
 		<a href="blogs/bl3.html">
-                    <iframe src="https://www.openprocessing.org/sketch/438495/embed/"></iframe>
+                    <img src="images/js.gif" alt="" />
 				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Making Art with the JavaScript Processing (p5)</h3>
 		</a>
 		    
