--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 				
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Last Update: 2017 June</p>
+						<p>Last Update: 2017 July</p>
 						<p>If you have any suggestions for the site or general comments, please email me :)</p>
-					</footer>
+						<p>(Mobile site coming soon..)</p>	
+				</footer>
 
 			</div>
 
