--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 	</head>
 
     <header id="header">					
-        <h1>The <strong>Blog</strong>.</h1>
+        <h1>The <strong>Infrequently Updated</strong> Blog.</h1>
     </header>
 	
 	
