--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,7 +8,7 @@
 	</head>
 
     <header id="header">					
-        <h1>Connect with <strong>Me</strong>.</h1>
+        <h1>The <strong>Story</strong>.</h1>
     </header>
 	
 	 
