--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
 		</center>
 		<br>
 		<center>
-			<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:100%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-smile-o"></i> Back to Top</a>
+			<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:100%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-smile-o"></i> Subscribe Email Alerts when the Site has a New Blog Posts/Feature!</a>
 		</center>
 		<br>
 	    </section>
