--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<h2 style="background-color:rgba(255, 215, 51, .6); color:white;">CONTACT: rgriff43@jhu.edu</h2>
 			<br>
 			<center>
-				<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:100%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-smile-o"></i> Subscribe to Email Alerts when the Site has a New Blog Posts/Feature!</a>
+				<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:50%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-smile-o"></i> Subscribe to Email Alerts</a>
 			</center>
 			<br>
 						
