--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<h2 style="background-color:rgba(255, 215, 51, .6); color:white;">CONTACT: rgriff43@jhu.edu</h2>
 			<br>
 			<center>
-				<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:50%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-smile-o"></i> Subscribe to Email Alerts</a>
+				<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:50%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-smile-o"></i> Subscribe <i class="fa fa-smile-o"></i></a>
 			</center>
 			<br>
 						
@@ -48,8 +48,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<p>Last Update: 2017 July</p>
-						<p>If you have any suggestions for the site or general comments, please email me :)</p>
-						<p>(Mobile site coming soon..)</p>	
+						<p>If you have any suggestions for the site or general comments, please email me :)</p>	
 				</footer>
 
 			</div>
