--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
 		    this is a school project (for some reason professors don't make new homeworks or projects),  I am 
 		    not able to make the code public due to <strong>academic ethics</strong> violations. However, if you 
 		    are not a student who will need to take Intermediate programming at Hopkins, <strong>just email me</strong>, 
-		    and I'm assume sharing the <strong>code</strong> with you would be appropriate. (My email is listed on the 
+		    and I'd assume sharing the <strong>code</strong> with you would be appropriate. (My email is listed on the 
 		    wite's homepage.) I can say that my <strong>partner</strong> and I received a <strong>119/100</strong>, which 
 		    I think may have been the highest score in the class.</p>
         </div>
