--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
 		    best results. Just like the previous project, since this is a university-related one,  I am 
 		    not able to make the code <strong>public</strong> due to <strong>academic ethics</strong> 
 		    violations. However, if you are not a student who will need to take Intermediate programming 
-		    at Hopkins, <strong>just email me</strong>, and I'm assume sharing the <strong>code</strong> 
+		    at Hopkins, <strong>just email me</strong>, and I'd assume sharing the <strong>code</strong> 
 		    with you would be appropriate. (My email is listed on the wite's homepage.) Why don't
 		    <strong>professors</strong> just make new assignments so we can all <strong>show off</strong>
 		    our code to <strong>employers/the public</strong>? It takes some of the <strong>fun</strong> 
