--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,7 +35,7 @@
 		
             <h2>I'm <strong>Reece</strong></h2> 
             
-                <h3 style="background-color:rgba(255, 255, 255, .6); color:black; padding:20px;" align="left"> <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="right" width="30%"/></a>
+                <h3 <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="right" width="30%"/></a>
                     &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying 
 			<strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong>
 			at <strong>Johns Hopkins University</strong>. 
@@ -62,6 +62,7 @@
 			to art created with algorithmic programming in JavaScript. I firmly believe
 			in <strong>learning by doing</strong> and taking education into your own hands.
 		</h3>
+		<br>
                 
             <a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf" class="button button-block button-rounded button-white button-large" style="height:50px; width:100%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-file-text-o"></i> Résumé</a>
             <br>
