--- a/aboutMe.html
+++ b/aboutMe.html
@@ -51,6 +51,11 @@
 			of startups (for which I am very grateful), I have been able to get some direct experience with
 			our backend using <strong>Google Protobuf</strong> and <strong>Firebase</strong>.  
 		</h3>
+		
+		<h3>  &emsp;&emsp;When I'm not working on the synoPTsis app, I work for codeConnects as a part-time 
+			web developer and instructor. The Coding School (TCS) is a 501c3 organization that aims
+			to empower the next generation through computer science education. You can find their website
+			<a href="projects.html" style="color:rgb(255, 215, 51)">here</a>.
                     
                  <h3> &emsp;&emsp;I got my start in computer science by making programs that made
 			high school life easier (ie homework tools, websites, ect.). My experience
