--- a/aboutMe.html
+++ b/aboutMe.html
@@ -52,9 +52,14 @@
 			our backend using <strong>Google Protobuf</strong> and <strong>Firebase</strong>.  
 		</h3>
 		
-		<h3>  &emsp;&emsp;When I'm not working on the synoPTsis app, I work for codeConnects as a part-time 
-			web developer and instructor. The Coding School (TCS) is a 501c3 organization that aims
-			to empower the next generation through computer science education. You can find their website
+		<h3>  &emsp;&emsp;When I'm not working on the synoPTsis app, I work for the Coding School on their 
+			codeConnects project as a part-time web developer and instructor. (codeConnects is an online 
+			platform that offers one-on-one computer science instruction and mentorship to underrepresented
+			middle and high school students. Pairing each student with a professional software engineer
+			or university student majoring in computer science, students participate in weekly,
+			face-to-face coding lessons using our platforms’ collaborative editing and video chat
+			features.) The Coding School (TCS) is a 501c3 organization that aims to empower the
+			next generation through computer science education. You can find their website
 			<a href="projects.html" style="color:rgb(255, 215, 51)">here</a>.
                     
                  <h3> &emsp;&emsp;I got my start in computer science by making programs that made
