--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,7 +35,7 @@
 		
             <h2>I'm <strong>Reece</strong></h2> 
             
-                <h3 <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="right" width="30%" padding-left="10px" padding-bottom="10px"/></a>
+                <h3 <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="right" width="30%" padding="10px, 10px, 10px, 10px"/></a>
                     &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying 
 			<strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong>
 			at <strong>Johns Hopkins University</strong>. 
