--- a/blog.html
+++ b/blog.html
@@ -67,12 +67,12 @@
                     <img src="images/goog.gif" alt="" />
 				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Google Games Washington D.C. 2017</h3>
                 </a>
-                <!--
+                
 		<a href="blogs/bl6.html">
-                    <img src="images/littlelife.jpg" alt="" />
-				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">A Litte Life (Book Review)</h3>
+                    <img src="images/therry.gif" alt="" />
+				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">The Digital Theremin in p5</h3>
                 </a>
-		--->
+		
             </div>
             </section>
         	<br>
