--- a/blogs/bl6.html
+++ b/blogs/bl6.html
@@ -38,7 +38,7 @@
         <a href="https://github.com/reecewgriffith/p5-JavaScript-Art/tree/master/Digital%20Theremin" style="color:rgb(255, 215, 51)">right here</a>.
 						</h3>
             
-            <h3 align="left">
+            <h3 align="center">
               <iframe src="https://www.openprocessing.org/sketch/439399/embed/" width="640" height="800"></iframe>
             </h3>
                           
