--- a/aboutMe.html
+++ b/aboutMe.html
@@ -41,7 +41,7 @@
 			at <strong>Johns Hopkins University</strong>. 
 		</h3>
                     
-		<h3>  &emsp;&emsp;This summer (2017), I am interning at the <a href="http://www.jhuapl.edu">Johns Hopkins University Applied Physics Lab</a> as a part of a startup called <strong>synoPTis</strong>.
+		<h3>  &emsp;&emsp;This summer (2017), I am interning at the <a href="http://www.jhuapl.edu" style="color:rgb(255, 215, 51)">Johns Hopkins University Applied Physics Lab</a> as a part of a startup called <strong>synoPTis</strong>.
 			We are currently working on an <strong>Android</strong> and <strong>iOs</strong> mobile
 			application to streamline patient records and data
 			for the Johns Hopkins Medical Center. This will hopefully allow physicians to get a quick
