--- a/aboutMe.html
+++ b/aboutMe.html
@@ -34,8 +34,8 @@
 		
 		
             <h2>I'm <strong>Reece</strong></h2> 
-            
-                <h3 <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="right" width="30%" hspace="20"/></a>
+            <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="right" width="30%" hspace="20"/></a>
+                <h3 
                     &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying 
 			<strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong>
 			at <strong>Johns Hopkins University</strong>. 
