--- a/aboutMe.html
+++ b/aboutMe.html
@@ -34,6 +34,9 @@
 		
 		
             <h2>I'm <strong>Reece</strong></h2> 
+		
+		<div>
+		
             <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="left" width="30%" hspace="20"/></a>
                 <h3 
                     &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying 
@@ -72,6 +75,8 @@
 			in <strong>learning by doing</strong> and taking education into your own hands.
 		</h3>
 		<br>
+			
+		</div>
                 
             <a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf" class="button button-block button-rounded button-white button-large" style="height:50px; width:100%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-file-text-o"></i> Résumé</a>
             <br>
