--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,7 +35,7 @@
 		
             <h2>I'm <strong>Reece</strong></h2> 
 		
-		<div>
+		<div padding="20px, 20px, 20px, 20px">
 		
             <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="left" width="30%" hspace="20"/></a>
 			
