--- a/aboutMe.html
+++ b/aboutMe.html
@@ -37,7 +37,7 @@
 		
 		<div padding="20px, 20px, 20px, 20px">
 		
-            <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="left" width="30%" hspace="20"/></a>
+            <a href="images/avatar.jpg"><img src="images/avatar.jpg" align="left" width="30%" style="padding:20px"/></a>
 			
 		</div>
                 <h3 
