--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,11 @@
 				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Making Art with the JavaScript Processing (p5)</h3>
 		</a>
 		    
+		<a href="blogs/bl7.html">
+                    <img src="images/hbeach.gif" alt="" />
+				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">The Hunnington Dog Beach Trip</h3>
+		</a>
+		    
             </div>
 			
             <div>
