--- a/blog.html
+++ b/blog.html
@@ -77,6 +77,11 @@
                     <img src="images/therry.gif" alt="" />
 				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">The Digital Theremin in p5</h3>
                 </a>
+		    
+		<a href="blogs/bl8.html">
+                    <img src="images/question.gif" alt="" />
+				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">200 Questions</h3>
+                </a>
 		
             </div>
             </section>
