--- a/blogs/bl8.html
+++ b/blogs/bl8.html
@@ -49,7 +49,7 @@
 			<h3 style="color:red">Q: What’s your favorite piece of clothing you own / owned?</h3>
                         <h3 style="color:white">A: I can't really pick just one. I have three items, each obtained a different way.
 				<ul>
-  					<li>Coach Baseball Hat (purchased): leather accents, a nice way to class up a casual outfit</li>
+  					<li>Adidas Gonz Shoes (purchased): pink leather skate shoes, they have poems by the designer scattered on the shoe, haven't seen anything else like them yet</li>
   					<li>Vintage Wrangler Jean Jacket (thrifted): wool collar and lined, never went out of style in my opinion</li>
   					<li>1989 Baltimore Orioles Baseball Hat (handed down): My dad gave me this hat when I left to Baltimore for college, immense sentimental value</li>
 				</ul>
