--- a/blogs/bl8.html
+++ b/blogs/bl8.html
@@ -851,7 +851,8 @@
 		</div>
 						
 			<br>
-						
+				<h3>If you made it here, thanks for reading them all. (I don't know why you did)</h3>
+			<br>			
                 <h3 align="left" style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">        
 				<!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
