--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
 		    
 		<a href="blogs/bl8.html">
                     <img src="images/question.gif" alt="" />
-				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">200 Questions</h3>
+				    <h3 style="background-color:rgba(255, 215, 51, .6); color:white;">Get to Know You Questions Answered</h3>
                 </a>
 		
             </div>
