--- a/blogs/bl8.html
+++ b/blogs/bl8.html
@@ -247,7 +247,7 @@
 			<br>
 						
 			<h3 style="color:red">Q: What’s your dream car?</h3>
-                        <h3 style="color:white">A: Aston Martin DB9</h3>
+                        <h3 style="color:white">A: Mercedes-Benz SLS AMG GT</h3>
 			<br>
 						
 			<h3 style="color:red">Q: What’s worth spending more on to get the best?</h3>
