--- a/aboutMe.html
+++ b/aboutMe.html
@@ -91,9 +91,11 @@
                     </h3>
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
                         <ul>
-                            <li><strong>Computer Science:</strong> C/C++, Java, Python, Linux, JavaScript (p5), Ionic 2 (framework for iOS, android, and windows apps), Angular, HTML, CSS, SQL/NoSQL (familiarity)</li>
-                            <li><strong>Technologies:</strong> Android (Android Studio), Wordpress, Photoshop</li>
-                            <li>Git (Github and Gitlab)</li>
+                            <li><strong>Computer Science:</strong> C/C++, Java, Python, Terminal, JavaScript (p5), 
+				    Ionic3 (cross-platform framework), Angular, HTML (W3C), CSS and SCSS, XML, Android Studio, 
+				    Eclipse (IDE), Xcode (IDE), Firebase, Google Protobuf, MongoDB, Mailchimp</li>
+                            <li><strong>Technologies:</strong> Android, iOS</li>
+			    <li><strong>Git</strong> (Github, Gitlab, and Bitbucket)</li>
                         </ul> 
                     </h3>
                 </div>
@@ -113,6 +115,8 @@
                             <li>Leadership and Public Speaking</li>
                             <li>Professional Writing/Communication</li>
                             <li>Social Psychology</li>
+			    <li>Teaching Experience</li>
+		      	    <li>Community Outreach</li>
                         </ul>
                     </h3>
                 </div>
