--- a/aboutMe.html
+++ b/aboutMe.html
@@ -64,7 +64,7 @@
 			face-to-face coding lessons using our platforms’ collaborative editing and video chat
 			features.) The Coding School (TCS) is a 501c3 organization that aims to empower the
 			next generation through computer science education. You can find their website
-			<a href="projects.html" style="color:rgb(255, 215, 51)">here</a>.
+			<a href="the-cs.org" style="color:rgb(255, 215, 51)">here</a>.
                     
                  <h3> &emsp;&emsp;I got my start in computer science by making programs that made
 			high school life easier (ie homework tools, websites, ect.). My experience
